Changed video renderer from VideoForWindows to DirectShow.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7746 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/plugins/MediaPlayer/MediaPlayer_9.vcproj
+++ b/plugins/MediaPlayer/MediaPlayer_9.vcproj
@@ -79,9 +79,9 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="vfw32.lib"
+				AdditionalDependencies="Strmiids.lib"
 				LinkIncremental="2"
-				ModuleDefinitionFile=".\MediaPlayer.def"
+				ModuleDefinitionFile="MediaPlayer.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -167,9 +167,9 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="vfw32.lib"
+				AdditionalDependencies="Strmiids.lib"
 				LinkIncremental="2"
-				ModuleDefinitionFile=".\MediaPlayer.def"
+				ModuleDefinitionFile="MediaPlayer.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="17"
@@ -261,9 +261,9 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="vfw32.lib"
+				AdditionalDependencies="Strmiids.lib"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\MediaPlayer.def"
+				ModuleDefinitionFile="MediaPlayer.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -356,9 +356,9 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="vfw32.lib"
+				AdditionalDependencies="Strmiids.lib"
 				LinkIncremental="1"
-				ModuleDefinitionFile=".\MediaPlayer.def"
+				ModuleDefinitionFile="MediaPlayer.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
