--- a/vc8_0/Shareaza.vcproj
+++ b/vc8_0/Shareaza.vcproj
@@ -29,8 +29,8 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying LibGFL280 &amp; BugTrap dlls..."
-				CommandLine="if not exist &quot;$(OutDir)libgfl280.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\plugins\libGFL\$(ConfigurationName)$(PlatformName)\libgfl280.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)BugTrapU.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\BugTrapU.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;"
-				Outputs="$(OutDir)libgfl280.dll;$(OutDir)BugTrapU"
+				CommandLine="if not exist &quot;$(OutDir)libgfl280.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\plugins\libGFL\$(ConfigurationName)$(PlatformName)\libgfl280.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)BugTrapU.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\BugTrapU.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)dbghelp.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\dbghelp.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;"
+				Outputs="$(OutDir)libgfl280.dll;$(OutDir)BugTrapU.dll;$(OutDir)dbghelp.dll"
 				ExecutionBucket="1"
 			/>
 			<Tool
@@ -58,6 +58,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_SHAREAZA;SHAREAZA_USE_ASM;ZLIB_WINAPI;ZLIB_DLL"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
+				SmallerTypeCheck="true"
 				RuntimeLibrary="1"
 				DefaultCharIsUnsigned="true"
 				RuntimeTypeInfo="false"
@@ -124,8 +125,8 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying LibGFL280 &amp; BugTrap dlls..."
-				CommandLine="if not exist &quot;$(OutDir)libgfl280.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\plugins\libGFL\$(ConfigurationName)$(PlatformName)\libgfl280.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)BugTrapU-x64.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\BugTrapU-x64.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;"
-				Outputs="$(OutDir)libgfl280.dll;$(OutDir)BugTrapU-x64.dll"
+				CommandLine="if not exist &quot;$(OutDir)libgfl280.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\plugins\libGFL\$(ConfigurationName)$(PlatformName)\libgfl280.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)BugTrapU-x64.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\BugTrapU-x64.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)dbghelp.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\dbghelp.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;"
+				Outputs="$(OutDir)libgfl280.dll;$(OutDir)BugTrapU-x64.dll;$(OutDir)dbghelp.dll"
 				ExecutionBucket="1"
 			/>
 			<Tool
@@ -154,6 +155,7 @@
 				PreprocessorDefinitions="WIN64;_DEBUG;_WINDOWS;_SHAREAZA;ZLIB_WINAPI;ZLIB_DLL"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
+				SmallerTypeCheck="true"
 				RuntimeLibrary="1"
 				DefaultCharIsUnsigned="true"
 				RuntimeTypeInfo="false"
