Added CSelectDialog class.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7807 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -2205,6 +2205,10 @@
 					>
 				</File>
 				<File
+					RelativePath="DlgSelect.cpp"
+					>
+				</File>
+				<File
 					RelativePath="DlgSettingsManager.cpp"
 					>
 				</File>
@@ -3923,6 +3927,10 @@
 				</File>
 				<File
 					RelativePath="DlgSecureRule.h"
+					>
+				</File>
+				<File
+					RelativePath="DlgSelect.h"
 					>
 				</File>
 				<File
