Redesigned CLibraryPanel class to CPanelCtrl. Now its parent for all "panel"-classes CLibraryHistoryPanel, CLibraryMetaPanel and CSearchDetailPanel. Also fixed glitches when user doing panel resizing or scrolling. Added simple library/search file lists/panel content scrolling by mouse wheel.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7809 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -1921,10 +1921,6 @@
 					>
 				</File>
 				<File
-					RelativePath="CtrlLibraryPanel.cpp"
-					>
-				</File>
-				<File
 					RelativePath="CtrlLibraryThumbView.cpp"
 					>
 				</File>
@@ -1974,6 +1970,11 @@
 				</File>
 				<File
 					RelativePath="CtrlNetworkCombo.cpp"
+					>
+				</File>
+				<File
+					RelativePath="CtrlPanel.cpp"
+					DeploymentContent="true"
 					>
 				</File>
 				<File
@@ -3534,10 +3535,6 @@
 					>
 				</File>
 				<File
-					RelativePath="CtrlLibraryPanel.h"
-					>
-				</File>
-				<File
 					RelativePath="CtrlLibraryThumbView.h"
 					>
 				</File>
@@ -3587,6 +3584,10 @@
 				</File>
 				<File
 					RelativePath="CtrlNetworkCombo.h"
+					>
+				</File>
+				<File
+					RelativePath="CtrlPanel.h"
 					>
 				</File>
 				<File
