VS8: Update project file
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7811 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/Shareaza.vcproj
+++ b/vc8_0/Shareaza.vcproj
@@ -1282,10 +1282,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\shareaza\CtrlLibraryPanel.cpp"
-					>
-				</File>
-				<File
 					RelativePath="..\shareaza\CtrlLibraryThumbView.cpp"
 					>
 				</File>
@@ -1335,6 +1331,10 @@
 				</File>
 				<File
 					RelativePath="..\shareaza\CtrlNetworkCombo.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shareaza\CtrlPanel.cpp"
 					>
 				</File>
 				<File
@@ -2832,10 +2832,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\shareaza\CtrlLibraryPanel.h"
-					>
-				</File>
-				<File
 					RelativePath="..\shareaza\CtrlLibraryThumbView.h"
 					>
 				</File>
@@ -2885,6 +2881,10 @@
 				</File>
 				<File
 					RelativePath="..\shareaza\CtrlNetworkCombo.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shareaza\CtrlPanel.h"
 					>
 				</File>
 				<File
