--- a/vc8_0/Shareaza.vcproj
+++ b/vc8_0/Shareaza.vcproj
@@ -28,9 +28,9 @@
 			>
 			<Tool
 				Name="VCCustomBuildTool"
-				Description="Copying LibGFL280 &amp; BugTrap dlls..."
-				CommandLine="if not exist &quot;$(OutDir)libgfl280.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\plugins\libGFL\$(ConfigurationName)$(PlatformName)\libgfl280.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)BugTrapU.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\BugTrapU.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)dbghelp.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\dbghelp.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;"
-				Outputs="$(OutDir)libgfl280.dll;$(OutDir)BugTrapU.dll;$(OutDir)dbghelp.dll"
+				Description="Copying libgfl290 &amp; BugTrap dlls..."
+				CommandLine="if not exist &quot;$(OutDir)libgfl290.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\plugins\libGFL\$(ConfigurationName)$(PlatformName)\libgfl290.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)BugTrapU.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\BugTrapU.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)dbghelp.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\dbghelp.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;"
+				Outputs="$(OutDir)libgfl290.dll;$(OutDir)BugTrapU.dll;$(OutDir)dbghelp.dll"
 				ExecutionBucket="1"
 			/>
 			<Tool
@@ -124,9 +124,9 @@
 			>
 			<Tool
 				Name="VCCustomBuildTool"
-				Description="Copying LibGFL280 &amp; BugTrap dlls..."
-				CommandLine="if not exist &quot;$(OutDir)libgfl280.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\plugins\libGFL\$(ConfigurationName)$(PlatformName)\libgfl280.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)BugTrapU-x64.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\BugTrapU-x64.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)dbghelp.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\dbghelp.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;"
-				Outputs="$(OutDir)libgfl280.dll;$(OutDir)BugTrapU-x64.dll;$(OutDir)dbghelp.dll"
+				Description="Copying libgfl290 &amp; BugTrap dlls..."
+				CommandLine="if not exist &quot;$(OutDir)libgfl290.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\plugins\libGFL\$(ConfigurationName)$(PlatformName)\libgfl290.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)BugTrapU-x64.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\BugTrapU-x64.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;if not exist &quot;$(OutDir)dbghelp.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\BugTrap\dbghelp.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;"
+				Outputs="$(OutDir)libgfl290.dll;$(OutDir)BugTrapU-x64.dll;$(OutDir)dbghelp.dll"
 				ExecutionBucket="1"
 			/>
 			<Tool
@@ -222,9 +222,9 @@
 			>
 			<Tool
 				Name="VCCustomBuildTool"
-				Description="Copying LibGFL280 dll..."
-				CommandLine="if not exist &quot;$(OutDir)libgfl280.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\plugins\libGFL\$(ConfigurationName)$(PlatformName)\libgfl280.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;"
-				Outputs="$(OutDir)libgfl280.dll"
+				Description="Copying libgfl290 dll..."
+				CommandLine="if not exist &quot;$(OutDir)libgfl290.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\plugins\libGFL\$(ConfigurationName)$(PlatformName)\libgfl290.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;"
+				Outputs="$(OutDir)libgfl290.dll"
 				ExecutionBucket="1"
 			/>
 			<Tool
@@ -319,9 +319,9 @@
 			>
 			<Tool
 				Name="VCCustomBuildTool"
-				Description="Copying LibGFL280 dll..."
-				CommandLine="if not exist &quot;$(OutDir)libgfl280.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\plugins\libGFL\$(ConfigurationName)$(PlatformName)\libgfl280.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;"
-				Outputs="$(OutDir)libgfl280.dll"
+				Description="Copying libgfl290 dll..."
+				CommandLine="if not exist &quot;$(OutDir)libgfl290.dll&quot; (&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\plugins\libGFL\$(ConfigurationName)$(PlatformName)\libgfl290.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;)&#x0D;&#x0A;"
+				Outputs="$(OutDir)libgfl290.dll"
 				ExecutionBucket="1"
 			/>
 			<Tool
