Replaced WizardDot.bmp by WizardDot.ico
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7822 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -1974,7 +1974,6 @@
 				</File>
 				<File
 					RelativePath="CtrlPanel.cpp"
-					DeploymentContent="true"
 					>
 				</File>
 				<File
@@ -4980,7 +4979,7 @@
 				>
 			</File>
 			<File
-				RelativePath="Res\WizardDot.bmp"
+				RelativePath="Res\WizardDot.ico"
 				>
 			</File>
 			<File
