VS8: Update project file
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7876 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/Shareaza.vcproj
+++ b/vc8_0/Shareaza.vcproj
@@ -3576,10 +3576,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\shareaza\augment\com_ptr.hpp"
-					>
-				</File>
-				<File
 					RelativePath="..\shareaza\augment\IUnknownImplementation.hpp"
 					>
 				</File>
@@ -4330,7 +4326,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\shareaza\Res\WizardDot.bmp"
+				RelativePath="..\shareaza\Res\WizardDot.ico"
 				>
 			</File>
 			<File
