VS8: Add DlgSelect.* files to project
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7926 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/Shareaza.vcproj
+++ b/vc8_0/Shareaza.vcproj
@@ -1566,6 +1566,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\shareaza\DlgSelect.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\shareaza\DlgSettingsManager.cpp"
 					>
 				</File>
@@ -3225,6 +3229,10 @@
 				</File>
 				<File
 					RelativePath="..\shareaza\DlgSecureRule.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shareaza\DlgSelect.h"
 					>
 				</File>
 				<File
